Versió  4.0 Acaba les puntuacions i colors, i el mov. de la pala?

--- a/public_html/arkanoid.css
+++ b/public_html/arkanoid.css
@@ -4,3 +4,9 @@
     height: 512px;
     margin: 0 25%;
 }
+#puntuaciones {
+    display: inline-block;
+    float: left;
+    margin: 15px;
+    background-color: background;
+}
